objects/MPW_Keyword_Config__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPW_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MPW_External_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASIC_R&amp;DSubCategory</fullName>
                </value>
                <value>
                    <fullName>Backgrind</fullName>
                </value>
                <value>
                    <fullName>CategoryUsage</fullName>
                </value>
                <value>
                    <fullName>CornerSplit</fullName>
                </value>
                <value>
                    <fullName>DESubCategory</fullName>
                </value>
                <value>
                    <fullName>DeviceType</fullName>
                </value>
                <value>
                    <fullName>DieQuantity</fullName>
                </value>
                <value>
                    <fullName>DrawnOrientation</fullName>
                </value>
                <value>
                    <fullName>Expedite</fullName>
                </value>
                <value>
                    <fullName>ExpediteQuantityWaferForm</fullName>
                </value>
                <value>
                    <fullName>FabListing</fullName>
                </value>
                <value>
                    <fullName>ForwarderAccountType</fullName>
                </value>
                <value>
                    <fullName>IPSubCategory</fullName>
                </value>
                <value>
                    <fullName>QuantityWaferForm</fullName>
                </value>
                <value>
                    <fullName>RF_ASIC_A&amp;D_ProtosSubCategory</fullName>
                </value>
                <value>
                    <fullName>ShortLoopWafers</fullName>
                </value>
                <value>
                    <fullName>SRAM-28HP</fullName>
                </value>
                <value>
                    <fullName>SRAM-28SLP</fullName>
                </value>
                <value>
                    <fullName>SubDeviceExtraction</fullName>
                </value>
                <value>
                    <fullName>TurnkeyServices</fullName>
                </value>
                <value>
                    <fullName>WaferRestartQuantity</fullName>
                </value>
                <value>
                    <fullName>WaferRestartQuantityWaferForm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MPW Keyword Config</label>
    <listViews>
        <fullName>ASIC_R_DSubCategory</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>ASIC_R&amp;DSubCategory</value>
        </filters>
        <label>ASIC_R&amp;DSubCategory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Keywords</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Keywords</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BackGrind</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Backgrind</value>
        </filters>
        <label>BackGrind</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CategoryUsage</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>CategoryUsage</value>
        </filters>
        <label>CategoryUsage</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CornerSplit</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>CornerSplit</value>
        </filters>
        <label>CornerSplit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DESubCategory</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DESubCategory</value>
        </filters>
        <label>DESubCategory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DeviceType</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DeviceType</value>
        </filters>
        <label>DeviceType</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Die_Quantity</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DieQuantity</value>
        </filters>
        <label>Die Quantity</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DrawnOrientation</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DrawnOrientation</value>
        </filters>
        <label>DrawnOrientation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Expedite</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Expedite</value>
        </filters>
        <label>Expedite</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ExpediteQuantityWaferForm</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>ExpediteQuantityWaferForm</value>
        </filters>
        <label>ExpediteQuantityWaferForm</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FabListing</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>FabListing</value>
        </filters>
        <label>FabListing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ForwarderAccountType</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>ForwarderAccountType</value>
        </filters>
        <label>ForwarderAccountType</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IPSubCategory</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>IPSubCategory</value>
        </filters>
        <label>IPSubCategory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QuantityWaferForm</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>QuantityWaferForm</value>
        </filters>
        <label>QuantityWaferForm</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MPWKC-{0000000000}</displayFormat>
        <label>MPW Keyword Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPW Keyword Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>